--- a/1in2arena.html
+++ b/1in2arena.html
@@ -78,7 +78,7 @@
 
     <div class="mt-8 glass-ui px-8 py-3 rounded-full flex items-center gap-3">
         <div class="h-2 w-2 bg-red-600 rounded-full animate-pulse shadow-[0_0_10px_red]"></div>
-        <span class="text-[9px] font-black uppercase tracking-[0.2em]">Validated Physics Sync</span>
+        <span class="text-[9px] font-black uppercase tracking-[0.2em]">Match 3 to Earn points</span>
     </div>
 
     <script>
