--- a/1in2arena.html
+++ b/1in2arena.html
@@ -59,11 +59,24 @@
 </head>
 <body class="flex flex-col items-center py-6">
 
-    <div class="w-full max-w-md px-6 flex justify-between items-center mb-8">
+    <div class="w-full max-w-md px-6 flex justify-between items-center mb-8 relative">
         <div class="glass-ui p-4 rounded-2xl score-box">
             <p class="text-[9px] text-gray-400 font-black uppercase tracking-widest">Growth Weight</p>
-            <h2 id="score" class="text-3xl font-black">0.0<span class="text-xs brand-red ml-1">kg</span></h2>
+            <h2 id="score" class="text-3xl font-black text-white">0.0<span class="text-xs brand-red ml-1">kg</span></h2>
         </div>
+
+        <div class="absolute left-1/2 -translate-x-1/2 -top-2">
+            <button onclick="location.href='1in2leaderboard.html'" class="bg-white text-black text-[9px] font-black uppercase tracking-widest px-4 py-2 rounded-lg border border-white hover:bg-red-600 hover:text-white hover:border-red-600 transition-all duration-300 shadow-[0_0_15px_rgba(255,255,255,0.1)]">
+                View Leader Board
+            </button>
+        </div>
+
+        <div class="text-center">
+            <div id="timer" class="text-4xl font-black brand-red timer-font italic">60</div>
+            <p class="text-[8px] font-bold text-gray-500 uppercase">Seconds</p>
+        </div>
+    </div>
+
         <div class="text-center">
             <div id="timer" class="text-4xl font-black brand-red timer-font italic">60</div>
             <p class="text-[8px] font-bold text-gray-500 uppercase">Seconds</p>
