--- a/1in2arena.html
+++ b/1in2arena.html
@@ -95,7 +95,7 @@
     <script>
         // TOP OF SCRIPT
 const SB_URL = 'https://tbvmgcknkwsucstedigd.supabase.co';
-const SB_KEY = 'YOUR_KEY_HERE'; 
+const SB_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRidm1nY2tua3dzdWNzdGVkaWdkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc5ODgwMjQsImV4cCI6MjA4MzU2NDAyNH0.OhfvqWaGLwNvIJq8TBDomdtKWDII5MvC6zhKKJBUD9Q'; 
 const sb = window.supabase.createClient(SB_URL, SB_KEY);
 
         const items = ['🌽', '🍗', '🥚', '🐔', '🌾'];
