--- a/index.html
+++ b/index.html
@@ -55,25 +55,35 @@
             btn.disabled = true;
 
             try {
-                const { error } = await sb.from('Profiles').insert([{ 
+                // 1. CREATE AUTH USER (This makes the Arena consistent)
+                // We use phone + @chickenleague.com as a pseudo-email for Supabase Auth
+                const { data: authData, error: authError } = await sb.auth.signUp({
+                    email: ph + "@cl.com",
+                    password: ps,
+                    options: {
+                        data: { username: u, phone_number: ph }
+                    }
+                });
+
+                if (authError) throw authError;
+
+                // 2. CREATE PROFILE RECORD (For your dashboard/public data)
+                const { error: profileError } = await sb.from('Profiles').insert([{ 
                     public_username: u, 
                     phone_number: ph, 
                     password: ps, 
                     total_score: 0 
                 }]);
 
-                if (error) {
-                    alert("Database Error: " + error.message);
-                    btn.innerText = "CREATE ACCOUNT & PLAY";
-                    btn.disabled = false;
-                } else {
-                    alert("SUCCESS! WELCOME TO THE ARENA.");
-                    localStorage.setItem('league_user', u);
-                    window.location.href = "dashboard.html";
-                }
+                if (profileError) throw profileError;
+
+                alert("SUCCESS! WELCOME TO THE ARENA.");
+                localStorage.setItem('league_user', u);
+                window.location.href = "dashboard.html";
+
             } catch (err) {
                 alert("System Error: " + err.message);
-                btn.innerText = "RETRY";
+                btn.innerText = "CREATE ACCOUNT & PLAY";
                 btn.disabled = false;
             }
         }
