--- a/dashboard.html
+++ b/dashboard.html
@@ -57,6 +57,9 @@
         .nav-link i { font-style: normal; font-size: 1.4rem; }
         .nav-link span { font-size: 9px; font-weight: 900; text-transform: uppercase; letter-spacing: 0.05em; }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="security-bridge.js"></script>
+
 </head>
 <body>
 
