--- a/1in2.html
+++ b/1in2.html
@@ -65,6 +65,9 @@
 
         @keyframes spin { to { transform: rotate(360deg); } }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="security-bridge.js"></script>
+
 </head>
 <body class="pb-10">
 
