--- a/1in2arena.html
+++ b/1in2arena.html
@@ -57,6 +57,9 @@
         .score-box { border-left: 4px solid #ff0000; }
         .timer-font { font-family: 'Orbitron', sans-serif; }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="security-bridge.js"></script>
+
 </head>
 <body class="flex flex-col items-center py-6">
 
