--- a/1in2leaderboard.html
+++ b/1in2leaderboard.html
@@ -48,6 +48,9 @@
         ::-webkit-scrollbar-track { background: #000; }
         ::-webkit-scrollbar-thumb { background: #ff0000; border-radius: 10px; }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script src="security-bridge.js"></script>
+
 </head>
 <body class="flex flex-col items-center py-10 px-4">
 
