--- a/1in2.html
+++ b/1in2.html
@@ -32,7 +32,7 @@
 
         .slot-circle { 
             width: 85px; height: 85px; 
-            border-radius: 1rem; /* Matched to Twitter card style */
+            border-radius: 1rem; 
             border: 1px solid rgba(255,255,255,0.1); 
             display: flex; align-items: center; justify-content: center; 
             background: rgba(255,255,255,0.02); 
@@ -45,16 +45,8 @@
             box-shadow: 0 0 20px rgba(255,255,255,0.15); 
         }
 
-        #debug-status {
-            position: fixed;
-            bottom: 110px; /* Above bottom nav */
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 9px;
-            font-weight: 800;
-            color: #536471;
-            text-transform: uppercase;
-        }
+        /* Kill the visible debug text */
+        #debug-status { display: none; }
     </style>
 </head>
 <body class="pt-20 pb-32">
@@ -70,9 +62,8 @@
         </div>
 
         <div class="glass-panel overflow-hidden mb-6 border-b-2 border-blue-600">
-            <div class="h-28 bg-cover bg-center grayscale contrast-125" style="background-image: url('https://i.ibb.co/qYSmTyxm/IMG-2414.png');"></div>
-            <div class="p-5">
-                <div class="flex justify-between items-start">
+            <div class="h-44 bg-cover bg-center" style="background-image: url('https://i.ibb.co/fzmPStzb/IMG-2638.jpg');"></div>
+            <div class="p-5 bg-transparent"> <div class="flex justify-between items-start">
                     <div>
                         <h1 class="text-2xl font-chirp uppercase leading-none">Trial Broiler</h1>
                         <p class="text-blue-500 text-[9px] font-black uppercase tracking-[0.2em] mt-2">1v1 Instant Duel</p>
@@ -115,13 +106,8 @@
         let cachedSignal = null;
         let isProcessing = false;
 
-        function log(msg) {
-            document.getElementById('debug-status').innerText = `LOBBY: ${msg}`;
-        }
-
         async function syncLobby() {
             try {
-                // Ensure currentUser is pulled from the Supabase session via our security bridge
                 const { data: { session } } = await sb.auth.getSession();
                 if (session) currentUser = session.user.user_metadata.username;
 
@@ -135,7 +121,7 @@
                 indicator.innerHTML = `<span class="w-1.5 h-1.5 bg-blue-500 rounded-full animate-pulse"></span><span class="text-[9px] font-black text-blue-500 uppercase">Live Sync</span>`;
                 
                 updateUI();
-            } catch (e) { log(`SYNC ERROR`); }
+            } catch (e) { console.error("Sync Error"); }
         }
 
         function updateUI() {
@@ -169,7 +155,7 @@
                 if (cachedSignal?.is_live) {
                     btn.innerText = isUserIn ? "ENTER ARENA" : "LOBBY FULL";
                     btn.disabled = !isUserIn;
-                    btn.className = isUserIn ? "w-full py-5 bg-blue-600 text-white rounded-xl font-chirp text-lg uppercase" : "w-full py-5 bg-zinc-900 text-zinc-600 rounded-xl font-chirp text-lg uppercase";
+                    btn.className = isUserIn ? "w-full py-5 bg-blue-600 text-white rounded-xl font-chirp text-lg uppercase shadow-lg shadow-blue-500/20" : "w-full py-5 bg-zinc-900 text-zinc-600 rounded-xl font-chirp text-lg uppercase";
                 } else {
                     btn.innerText = isUserIn ? "AWAITING SIGNAL..." : "LOBBY FULL";
                     btn.disabled = true;
