--- a/1in2.html
+++ b/1in2.html
@@ -24,17 +24,10 @@
         .font-chirp { font-weight: 900; letter-spacing: -0.04em; }
         .orbitron { font-family: 'Orbitron', sans-serif; }
 
-        /* Modified to support total transparency where needed */
         .glass-panel { 
             background: rgba(255, 255, 255, 0.03); 
             border: 1px solid rgba(255, 255, 255, 0.08); 
             border-radius: 1.5rem; 
-        }
-
-        /* Specialized class for the HD Card to remove all background nesting */
-        .clear-panel {
-            background: none !important;
-            border: none !important;
         }
 
         .slot-circle { 
@@ -67,15 +60,14 @@
             </div>
         </div>
 
-        <div class="overflow-hidden mb-6 border-b-2 border-blue-600 rounded-[1.5rem]">
-            <div class="h-44 bg-cover bg-center" style="background-image: url('https://i.ibb.co/fzmPStzb/IMG-2638.jpg');"></div>
-            <div class="p-5 bg-transparent"> <div class="flex justify-between items-start">
-                    <div>
-                        <h1 class="text-2xl font-chirp uppercase leading-none">Trial Broiler</h1>
-                        <p class="text-blue-500 text-[9px] font-black uppercase tracking-[0.2em] mt-2">1v1 Instant Duel</p>
-                    </div>
-                    <span id="count_display" class="orbitron text-sm font-black text-white bg-white/10 px-3 py-1 rounded">0/2</span>
+        <div class="mb-6">
+            <div class="h-48 bg-cover bg-center rounded-2xl border-b-2 border-blue-600" style="background-image: url('https://i.ibb.co/FbCS1n9p/IMG-2638.jpg');"></div>
+            <div class="py-4 flex justify-between items-start">
+                <div>
+                    <h1 class="text-2xl font-chirp uppercase leading-none">Trial Broiler</h1>
+                    <p class="text-blue-500 text-[9px] font-black uppercase tracking-[0.2em] mt-2">1v1 Instant Duel</p>
                 </div>
+                <span id="count_display" class="orbitron text-sm font-black text-white bg-white/10 px-3 py-1 rounded">0/2</span>
             </div>
         </div>
 
@@ -107,7 +99,6 @@
     </main>
 
     <script>
-        // ... (Script remains unchanged as it is already optimized for the Monochrome/X-standard build)
         let currentUser = null;
         let cachedPlayers = [];
         let cachedSignal = null;
